# cgi

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README  README.md  README.txt  project-root.jam
boost/: cgi.hpp
boost/cgi/: acgi.hpp  basic_client.hpp  basic_client_fwd.hpp  basic_connection.hpp  basic_connection_fwd.hpp  basic_gateway.hpp  basic_gateway_fwd.hpp  basic_io_object.hpp  basic_protocol_service.hpp  basic_protocol_service_fwd.hpp  basic_request.hpp  basic_request_acceptor.hpp  basic_request_acceptor_fwd.hpp  basic_request_fwd.hpp  basic_sync_io_object.hpp  buffer.hpp  cgi.hpp  config.hpp  connection_base.hpp  cookie.hpp  data_sink.hpp  data_source.hpp  error.hpp  fcgi.hpp  gateway_service.hpp  header.hpp  io_service.hpp  io_service_provider.hpp  io_service_provider_fwd.hpp  is_async.hpp  map.hpp  read.hpp  request.hpp  request_acceptor_service.hpp  request_base.hpp  request_ostream.hpp  request_service.hpp  request_service_fwd.hpp  response.hpp  return.hpp  (+7 more)
boost/cgi/acgi/: acceptor.hpp  request.hpp  request_impl.hpp  request_service.hpp  service.hpp
boost/cgi/cgi/: cgi_service.hpp  client.hpp  request.hpp  request_impl.hpp  request_service.hpp  service.hpp  traits.hpp
boost/cgi/common/: basic_protocol_service.hpp  basic_protocol_service_fwd.hpp  commit.hpp  cookie.hpp  data_map_proxy.hpp  error.hpp  form_parser.hpp  form_parser.ipp  form_part.hpp  header.hpp  io_service.hpp  io_service_provider.hpp  io_service_provider_fwd.hpp  is_async.hpp  map.hpp  name.hpp  parse_options.hpp  path_info.hpp  protocol_traits.hpp  request_acceptor_service.hpp  request_base.hpp  request_data.hpp  request_service.hpp  request_status.hpp  response.hpp  return.hpp  role_type.hpp  source_enums.hpp  status_type.hpp  tags.hpp
boost/cgi/connections/: anonymous_pipe.hpp  async_stdio.hpp  shareable_tcp_socket.hpp  stdio.hpp  tcp_socket.hpp
boost/cgi/detail/: basic_io_object.hpp  basic_sync_io_object.hpp  cgi_request_impl_base.hpp  cgi_service_impl_base.hpp  common_headers.hpp  extract_params.hpp  protocol_traits.hpp  push_options.hpp  save_environment.hpp  service_base.hpp  service_id.hpp  throw_error.hpp  url_decode.hpp  url_decode.ipp
boost/cgi/fcgi/: acceptor.hpp  acceptor_service_impl.hpp  client.hpp  error.hpp  fcgi_connection.hpp  request.hpp  request_acceptor_service.hpp  request_fwd.hpp  request_service.hpp  service.hpp  specification.hpp  traits.hpp  transport_selection.hpp  win32_acceptor_service_impl.hpp  win32_connection.hpp
boost/cgi/fwd/: basic_client_fwd.hpp  basic_connection_fwd.hpp  basic_protocol_service_fwd.hpp  basic_request_fwd.hpp  io_service_provider_fwd.hpp  sessions_fwd.hpp
boost/cgi/gateway_impl/: acgi_gateway_impl.hpp  async_cgi_gateway_impl.hpp  cgi_gateway_impl.hpp  scgi_gateway_impl.hpp
boost/cgi/gateway_service/: acgi_gateway_service.hpp  async_cgi_gateway_service.hpp  cgi_gateway_service.hpp  scgi_gateway_service.hpp
boost/cgi/http/: status_code.hpp
boost/cgi/impl/: basic_request.ipp  fcgi_request_service.ipp  form_parser.ipp  response.ipp
boost/cgi/import/: basic_io_object.hpp  buffer.hpp  io_service.hpp  read.hpp  streambuf.hpp  write.hpp
boost/cgi/scgi/: acceptor.hpp  acceptor_service_impl.hpp  error.hpp  request.hpp  request_acceptor_service.hpp  request_impl.hpp  request_service.hpp  request_service.ipp  service.hpp  service_impl.hpp  traits.hpp
boost/cgi/utility/: get.hpp  get_value.hpp  has_key.hpp  redirect.hpp  sessions.hpp  stencil.hpp
libs/cgi/: index.html
libs/cgi/doc/: Jamfile.v2  cgi.qbk  index.html  program_flow.txt
libs/cgi/doc/src/: acknowledgements.qbk  building.qbk  cgi.qbk  design.qbk  examples.qbk  future_development.qbk  introduction.qbk  library_organisation.qbk  links.qbk  overview.qbk  preface.qbk  reference.qbk  responses.qbk  status.qbk  tips.qbk  troubleshooting.qbk  tutorial.qbk  user_guide.qbk  utilities.qbk
libs/cgi/doc/src/overview/: acceptors.qbk  clients.qbk  requests.qbk  responses.qbk  services.qbk  sessions.qbk  traits.qbk
libs/cgi/doc/src/tutorial/: 0-old-fastcgi_quickstart.cpp  Copy of fastcgi_quickstart.cpp  cgi.qbk  cgi_quickstart.cpp  fastcgi.qbk  fastcgi_quickstart.cpp  hello_world.qbk  installation.qbk  quickstart.qbk  requests.qbk  running.qbk  tutorial.qbk  variables.qbk
libs/cgi/doc/src/user_guide/: async_ops.qbk  building.qbk  examples.qbk  getting_started.qbk  handling_requests.qbk  headers.qbk  meta_data.qbk  protocols.qbk  request_objects.qbk  server_configuration.qbk  server_support.qbk  tutorial.qbk
libs/cgi/doc/src/utilities/: sessions.qbk  stencils.qbk
libs/cgi/example/: Jamfile.v2  doc.qbk
libs/cgi/example/acgi/: Jamfile.v2  doc.qbk  main.cpp
libs/cgi/example/acgi/amortization/: Jamfile.v2  acgi_amort.tpl  doc.qbk  main.cpp
libs/cgi/example/acgi/cookie_game/: Jamfile.v2  main.cpp
libs/cgi/example/acgi/echo/: Jamfile.v2  doc.qbk  main.cpp
libs/cgi/example/acgi/hello_world/: Jamfile.v2  main.cpp
libs/cgi/example/acgi/login/: CheckCookie.cpp  Jamfile.v2  Login.cpp  Logout.cpp
libs/cgi/example/cgi/: Jamfile.v2  doc.qbk  main.cpp
libs/cgi/example/cgi/DebugServer/: Jamfile.v2  (+4 more)
libs/cgi/example/fcgi/: Jamfile.v2  README  doc.qbk
libs/cgi/example/servers/: fcgi_threadpool_server.cpp
libs/cgi/example/xcgi/: Jamfile.v2  doc.qbk
libs/cgi/src/: library_sources.cpp
libs/cgi/test/: CMakeLists.txt  Jamfile.v2
libs/cgi/test/compile/: Jamfile.v2  acgi_acceptor.cpp  acgi_request.cpp  async_stdio_connection.cpp  cgi_header_check.cpp  cgi_request.cpp  cgi_service.cpp  fcgi_acceptor.cpp  fcgi_request.cpp  fcgi_service.cpp  is_async_test.cpp  response.cpp  scgi_acceptor.cpp  scgi_request.cpp  scgi_service.cpp  shareable_tcp_connection.cpp  stdio_connection.cpp  tcp_connection.cpp
libs/cgi/test/compile_fail/: Jamfile.v2
libs/cgi/test/run/: Jamfile.v2  acgi_simple_request.cpp  cgi_simple_request.cpp  cgi_test.cpp  cookie.cpp  data_map_proxy.cpp  has_key.cpp  hello_world.cpp  map_test.cpp  name_test.cpp  parse_options.cpp  request_data.cpp  request_test_template.hpp  response.cpp  sessions.cpp  stdio_connection.cpp
libs/cgi/util/system/: Jamfile.v2
(+104 files in other folders)
